# auto_diff_pkg

./: .gitignore  .gitmodules  README.md
docs/: conf.py  index.rst
docs/notebooks/: advantages.ipynb  cythonize.ipynb  dual_autodiff.ipynb
dual_autodiff/: README.md  pyproject.toml
dual_autodiff/dual_autodiff/: __init__.py  dual.py  version.py
dual_autodiff/dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt
dual_autodiff/tests/: test_autodiff.py
dual_autodiff_x/: README.md  pyproject.toml  setup.py
dual_autodiff_x/src/dual_autodiff_cy/: __init__.py  dual.pyx  version.py
dual_autodiff_x/src/dual_autodiff_cy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dual_autodiff_x/src/dual_autodiff_x/: dual.c  dual.cp313-win_amd64.pyd  dual.html  dual.pyx
dual_autodiff_x/tests/: test_autodiff.py  test_dual.py
dual_autodiff_x/wheelhouse/: UNKNOWN-0.0.0b0-cp36-cp36m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_cy-0.0.0b0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_cy-0.0.0b0-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.0b0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.0b0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.0b0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.0b0-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl
